--- a/client/src/components/styles.css
+++ b/client/src/components/styles.css
@@ -55,7 +55,7 @@
 /* === BUTTONS === */
 /*==================*/
 
-button {
+.zd-button {
   background-color: white;
   font-family: 'Ubuntu', sans-serif;
   border-color: #056676;
@@ -66,7 +66,7 @@ button {
   text-align: center;
 }
 
-button:hover {
+.zd-button:hover {
   color: #e8ded2;
   border: 2px solid #056676;
   background: #056676;
